# CSC791Project

./: .gitmodules  .jekyllignore  README.md  index.html  requirements.txt
PythonAPI/carla/agents/navigation/: basic_agent.py  local_planner.py
PythonAPI/examples/: README2  README4  my_automatic_control.py  my_automatic_control_2.py  my_automatic_control_3.py  my_automatic_control_4.py
docs/: README.html  index.html
lidar_to_carla/: scan_sample.txt
lidar_to_carla/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lidar_to_carla/install/lidar_to_carla/lib/lidar_to_carla/: fetch_lidar  lidar_obj_detect
lidar_to_carla/install/lidar_to_carla/share/lidar_to_carla/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lidar_to_carla/log/: latest_build
lidar_to_carla/rosbag2_2025_04_02-21_35_51/: metadata.yaml  rosbag2_2025_04_02-21_35_51_0.db3
lidar_to_carla/src/lidar_to_carla/: package.xml  setup.cfg  setup.py
lidar_to_carla/src/lidar_to_carla/lidar_to_carla/: fetch_lidar.py  lidar_obj_detect.py
lidar_to_carla/src/lidar_to_carla/lidar_to_carla/launch/: lidar_bridge_launch.py
ros-carla-bridge/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros-carla-bridge/install/carla_ackermann_control/share/carla_ackermann_control/: carla_ackermann_control.launch.py  carla_ros_bridge_with_ackermann_control.launch.py  package.sh  package.xml  settings.yaml
ros-carla-bridge/install/carla_ackermann_msgs/share/carla_ackermann_msgs/: local_setup.bash  local_setup.dsv  (+4 more)
ros-carla-bridge/log/: latest_build
(+697 files in other folders)
